# EOCV-AprilTag-Plugin

./: .gitmodules  build.gradle  readme.md  settings.gradle  sonatype-publish.gradle
apriltag/: CMakeLists.txt  build.gradle
apriltag/src/main/: AndroidManifest.xml
apriltag/src/main/cpp/: AprilTagDetectionJNI.cpp  AprilTagDetectorJNI.cpp
apriltag/src/main/cpp/apriltag/src/: apriltag.c
apriltag/src/main/cpp/apriltag_common/src/: g2d.c  getopt.c  image_u8x3.c  image_u8x4.c  pam.c  pjpeg.c  pnm.c  string_util.c  time_util.c  unionfind.c  workerpool.c  zarray.c  zhash.c  zmaxheap.c
apriltag/src/main/java/org/openftc/apriltag/: AprilTagDetectorJNI.java  AprilTagPose.java  ApriltagDetectionJNI.java
examples/: build.gradle
examples/src/main/java/org/firstinspires/ftc/teamcode/: AprilTagAutonomousInitDetectionExample.java  AprilTagDemo.java  AprilTagDetectionPipeline.java
